# AA-SI_recipe_manager

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
example_recipes/Workshop_example_recipe_refactor/: byo_folder_example.yaml  extra_calibration_hb1603_survey_pipeline.yaml  hb1603_survey_pipeline.yaml  hb1603_survey_pipeline_modular.yaml  machine_learning.yaml  pipeline_modified.yaml  processing_lvls_1_to_3.yaml  simplified_hb1603_survey_pipeline.yaml
example_recipes/Workshop_example_recipe_refactor/hb1603_env/: pyvenv.cfg
example_recipes/Workshop_example_recipe_refactor/hb1603_env/Scripts/: activate  activate.bat  jp.py  numba
example_recipes/Workshop_example_recipe_refactor/nefsc_uc_e2_cal_outputs/logs/: calibration_flags.json
example_recipes/Workshop_example_recipe_refactor/nefsc_uc_e2_cal_outputs/mapping_files/: calibration_configurations.yaml  channel_to_calibration_mapping.yaml
example_recipes/Workshop_example_recipe_refactor/nefsc_uc_e2_cal_outputs/raw_file_configs/: raw_file_configs.yaml
example_recipes/Workshop_example_recipe_refactor/nefsc_uc_e2_cal_outputs/single_channel_calibration_files/: 2016-07-18__120000__config-1.yaml  2016-07-18__18000__config-1.yaml  2016-07-18__200000__config-1.yaml  2016-07-18__38000__config-1.yaml  2016-07-18__70000__config-1.yaml
example_recipes/Workshop_example_recipe_refactor/raw_file_inputs/HB1603_2016-07-25_2058-2145/: D20160725-T205832.bot  D20160725-T205832.idx  D20160725-T212129.bot  D20160725-T212129.idx  D20160725-T214425.bot  D20160725-T214425.idx
src/aa_recipe_manager/: __init__.py  __main__.py  api.py  cli.py  exceptions.py  validation.py
src/aa_recipe_manager/dry_run/: __init__.py  engine.py
src/aa_recipe_manager/executor/: base.py  dask_executor.py  prefect_executor.py  sequential.py
src/aa_recipe_manager/generator/: core.py
src/aa_recipe_manager/generator/backends/: notebook.py  script.py
src/aa_recipe_manager/model/: __init__.py  types.py
src/aa_recipe_manager/orchestrator/: hybrid.py
src/aa_recipe_manager/parser/: dag_builder.py  toml_reader.py  yaml_reader.py
src/aa_recipe_manager/provenance/: recorder.py
src/aa_recipe_manager/registry/: loader.py  registry.py
src/aa_recipe_manager/registry/builtin/specs/: add_auxiliary_features.yaml  (+29 more)
src/aa_recipe_manager/resolver/: dependencies.py  params.py
src/aa_recipe_manager/tracker/: pipeline_tracker.py
tests/: conftest.py  test_all_builtin_specs_extra.py  test_cli.py  test_dag_builder.py  test_dependencies.py  test_dry_run.py  test_e2e.py  test_env.py  test_generator.py  test_models.py  test_package.py  test_parser.py  test_provenance.py  test_registry.py  test_tracker.py
